# tsn-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONCEPTS.md  README.md  TODOS.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
docs/: diagnostics-log-contract.md  ned-contract.md  staged-agent-workflow.md  testing.md  topology-export-contract.md  topology-mcp.md  tsn-topology-status.md
scripts/: check-no-legacy-types.sh  copy-claude-binary.mjs  prepare-release.mjs  verify-hardware-api.mjs  verify-skills.mjs
src-node/: claude-agent-worker.mjs  claude-agent-worker.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_e2e.rs  commands.rs  db.rs  diagnostic_store.rs  flow_plan_command.rs  flow_route.rs  flow_verify_command.rs  hardware_api.rs  hardware_api_config.rs  hardware_command.rs  inet_bundle.rs  inet_remote.rs  inet_sim_bundle.rs  inet_sim_command.rs  inet_sim_http.rs  inet_sim_http_config.rs  inet_verify_command.rs  lib.rs  log_file_writer.rs  main.rs  planner_client.rs  project_writer.rs  redaction.rs  session_export.rs  session_import.rs  session_store.rs  skill_files.rs  task_request.rs  task_store.rs  timesync_query_command.rs  timesync_sidecar_routes.rs  timesync_tree.rs  timesync_verify.rs  topology_backfill.rs  topology_compute.rs  topology_intermediate.rs  topology_mutation_buffer.rs  topology_ops.rs  topology_position_command.rs  topology_query_command.rs  (+5 more)
src-tauri/tests/: real_agent_e2e.rs
(+377 files in other folders)
