[package]
name = "tsn-agent"
version = "0.1.0"
description = "TSN Agent desktop application"
authors = ["TSN Agent contributors"]
edition = "2021"

[lib]
name = "tsn_agent"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
