[package]
name = "tsn-agent"
version = "0.2.1"
description = "TSN Agent desktop application"
authors = ["TSN Agent contributors"]
edition = "2021"

[lib]
name = "tsn_agent"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
